# EspINA

./: CMakeLists.txt  CTestConfig.cmake  CTestCustom.cmake  CajalConfig.cmake.in  ESPINAConfig.cmake.in  ESPINAConfigVersion.cmake.in  ESPINAUse.cmake  EspinaConfig.cmake.in  EspinaConfig.h.in  EspinaUse.cmake  FindCajal.cmake  README.md  default_taxonomy.xml  espina.conf
App/: .EspinaMainWindow.cpp.kate-swp  AutoSave.cpp  AutoSave.h  CMakeLists.txt  EspinaErrorHandler.cpp  EspinaErrorHandler.h  EspinaMainWindow.cpp  EspinaMainWindow.h  RecentDocuments.cpp  RecentDocuments.h  main.cpp  winexeprops.rc.in
Core/: Bounds.cpp  Bounds.h  CMakeLists.txt  CoreFactory.cpp  CoreFactory.h  EspinaDebug.h  EspinaFactory.cpp  EspinaRegion.cpp  EspinaRegion.h  EspinaRegions.cpp  EspinaRegions.h  EspinaSettings.cpp  EspinaSettings.h  EspinaTypes.cpp  EspinaTypes.h  EspinaVolume.cpp  EspinaVolume.h  FilterCreator.h  Plugin.cpp  Plugin.h  Relations.h  Types.h  windllprops.rc.in
Extensions/: CMakeLists.txt  ExtensionFactory.h  ExtensionUtils.h  LibraryExtensionFactory.cpp  LibraryExtensionFactory.h  windllprops.rc.in
Filters/: .directory  BasicSegmentationFilter.cpp  BasicSegmentationFilter.h  CMakeLists.txt  ChannelReader.cpp  ChannelReader.h  CleanSegmentationVoxelsFilter.cpp  CleanSegmentationVoxelsFilter.h  CloseFilter.cpp  CloseFilter.h  ClosingFilter.cpp  ClosingFilter.h  ContourSource.cpp  ContourSource.h  DilateFilter.cpp  DilateFilter.h  ErodeFilter.cpp  ErodeFilter.h  FillHoles2DFilter.cpp  FillHoles2DFilter.h  FillHolesFilter.cpp  FillHolesFilter.h  FreeFormSource.cpp  FreeFormSource.h  ImageLogicFilter.cpp  ImageLogicFilter.h  LibraryFiltersFactory.cpp  LibraryFiltersFactory.h  MorphologicalEditionFilter.cpp  MorphologicalEditionFilter.h  OpenFilter.cpp  OpenFilter.h  OpeningFilter.cpp  OpeningFilter.h  SeedGrowSegmentationFilter.cpp  SeedGrowSegmentationFilter.h  SliceInterpolationFilter.cpp  SliceInterpolationFilter.h  SourceFilter.cpp  SourceFilter.h  (+9 more)
GUI/: .directory  CMakeLists.txt  FilterDelegateFactory.cpp  FilterDelegateFactory.h  ISettingsPanel.h  ModelFactory.cpp  ModelFactory.h  OutputAdapter.h  SupportedFormats.cpp  SupportedFormats.h  Types.h  ViewManager.cpp  ViewManager.h  windllprops.rc.in
Plugins/: CMakeLists.txt
Support/: ActionGroupWidget.cpp  ActionGroupWidget.h  CMakeLists.txt  Context.cpp  Context.h  ContextFactories.cpp  ContextFactories.h  DockWidget.h  DynamicMenu.h  EventHandler.cpp  EventHandler.h  FilterHistory.h  FilterRefiner.h  IColorEngineProvider.cpp  IColorEngineProvider.h  IFactoryExtension.cpp  IFactoryExtension.h  IFileReader.h  IFilterCreator.cpp  IFilterCreator.h  ITool.h  IToolBar.h  IToolBarFactory.cpp  IToolBarFactory.h  Plugin.h  ROIAccumulator.cpp  ROIAccumulator.h  ROIProvider.h  RenderSwitch.cpp  RenderSwitch.h  Report.cpp  Report.h  SupportTypes.h  Tool.h  ToolBar.h  ToolGroup.cpp  ToolGroup.h  Types.h  VOITool.h  ViewManager.cpp  (+2 more)
Tests/: CMakeLists.txt  MeshTestingUtils.cpp  MeshTestingUtils.h  ModelProfiler.cpp  ModelProfiler.h  ModelTest.cpp  ModelTestUtils.cpp  ModelTestUtils.h  SkeletonTestingUtils.cpp  SkeletonTestingUtils.h  Testing_Support.cpp  Testing_Support.h  Testing_Support.txx  TestsTODO.txt  testing_support_channel_input.cpp  testing_support_channel_input.h  testing_support_dummy_filter.cpp  testing_support_dummy_filter.h
Undo/: AddCategoryCommand.cpp  AddCategoryCommand.h  AddChannel.cpp  AddChannel.h  AddClassificationCommand.cpp  AddClassificationCommand.h  AddFilter.cpp  AddFilter.h  AddRelation.cpp  AddRelation.h  AddRelationCommand.cpp  AddRelationCommand.h  AddSample.cpp  AddSample.h  AddSegmentation.cpp  AddSegmentation.h  AddSegmentations.cpp  AddSegmentations.h  AddTaxonomyElement.cpp  AddTaxonomyElement.h  CMakeLists.txt  ChangeCategoryCommand.cpp  ChangeCategoryCommand.h  ChangeSegmentationNotes.cpp  ChangeSegmentationNotes.h  ChangeSegmentationTags.cpp  ChangeSegmentationTags.h  ChangeSegmentationsStack.cpp  ChangeSegmentationsStack.h  ChangeTaxonomyCommand.cpp  ChangeTaxonomyCommand.h  FillHolesCommand.cpp  FillHolesCommand.h  ImageLogicCommand.cpp  ImageLogicCommand.h  ModifyDataCommand.cpp  ModifyDataCommand.h  RemoveCategoryCommand.cpp  RemoveCategoryCommand.h  RemoveSegmentation.cpp  (+11 more)
Views/: CMakeLists.txt  EspinaView.cpp  EspinaView.h  EspinaViews.xml  pqSliceView.cpp  pqSliceView.h  vtkEspinaSliceRepresentation.cpp  vtkEspinaSliceRepresentation.h  vtkEspinaView.cpp  vtkEspinaView.h  vtkPVEspinaView.cpp  vtkPVEspinaView.h  vtkPVSliceView.cpp  vtkPVSliceView.h  vtkSMEspinaViewProxy.cpp  vtkSMEspinaViewProxy.h  vtkSMSliceViewProxy.cpp  vtkSMSliceViewProxy.h  vtkSliceRepresentation.cpp  vtkSliceRepresentation.h
common/: BoundingBox.cpp  BoundingBox.h  CMakeLists.txt  Config.h.in  EspinaCore.cpp  EspinaCore.h  EspinaPlugin.cpp  EspinaPlugin.h  EspinaPluginManager.cpp  EspinaPluginManager.h  EspinaRegions.cpp  EspinaRegions.h  EspinaSaveDataReaction.cpp  EspinaTypes.cpp  EspinaTypes.h  File.cpp  File.h  FilePack.cpp  FilePack.h  RectangularVOI.cpp  RectangularVOI.h  SegmentationSelectionExtension.cpp  SegmentationSelectionExtension.h  colorExtension.cpp  colorExtension.h  crosshairExtension.cpp  crosshairExtension.h  crosshairRenderer.cpp  crosshairRenderer.h  eFilter.cpp  eFilter.h  espINAFactory.cpp  espINAFactory.h  espina.cpp  espina.h  espinaTypes.h  espina_debug.h  filter.cpp  filter.h  graphHelper.h  (+56 more)
data/: CMakeLists.txt  cajalTypes.h  hash.cpp  hash.h  modelItem.cpp  modelItem.h  porcessingTrace.cpp  porcessingTrace.h  processingTrace.cpp  processingTrace.h  taxonomy.cpp  taxonomy.h  trace.h
filters/: CMakeLists.txt  vtkAdaptiveBoundingRegionFilter.cpp  vtkAdaptiveBoundingRegionFilter.h  vtkBoundingRegionFilter.cpp  vtkBoundingRegionFilter.h  vtkColoringBlend.cpp  vtkColoringBlend.h  vtkConnectedThresholdImageFilter.cpp  vtkConnectedThresholdImageFilter.h  vtkConnectedThresholdRegionGrowImageFilter.cpp  vtkConnectedThresholdRegionGrowImageFilter.h  vtkCountingRegionFilter.cpp  vtkCountingRegionFilter.h  vtkImageLabelMapBlend.cpp  vtkImageLabelMapBlend.h  vtkMorphologicalFeaturesFilter.cpp  (+3 more)
(+4151 files in other folders)
